<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityEditarItem">

    <TextView
        android:id="@+id/tv_nombreItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="16dp"
        android:text="@string/nombreItem"
        app:layout_constraintEnd_toStartOf="@+id/et_personNameItem"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_personNameItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/layout_margin"
        android:ems="10"
        android:hint="@string/personNameItem"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_nombreItem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimeDatePickerItem"
        android:layout_width="410dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:background="@color/D1B2F3"
        android:text="@string/fecha_nacimientoItem"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_personNameItem" />



    <RadioGroup
        android:id="@+id/rg_modalidadItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeDatePickerItem">

        <RadioButton
            android:id="@+id/rbSemipresencialItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/semipresencialItem" />

        <RadioButton
            android:id="@+id/rbPresencialItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="68dp"
            android:text="@string/presencialItem" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_cicloItem"
        android:layout_width="397dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_modalidadItem">

        <RadioButton
            android:id="@+id/rb_AsirItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:checked="false"
            android:text="@string/asirItem" />

        <RadioButton
            android:id="@+id/rb_DawItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:checked="false"
            android:text="@string/dawItem" />

        <RadioButton
            android:id="@+id/rb_DamItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:checked="false"
            android:text="@string/damItem"
            android:textAlignment="center" />
    </RadioGroup>

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:layout_marginBottom="731dp"
        android:text="@string/txt_id"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_AceptarItem"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/aceptarItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_cicloItem" />

    <Button
        android:id="@+id/bt_CancelarItem"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/cancelarItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_AceptarItem" />

</androidx.constraintlayout.widget.ConstraintLayout>