<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDatosItem">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#CABDD9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </ScrollView>

    <LinearLayout
        android:layout_width="199dp"
        android:layout_height="319dp"
        android:orientation="vertical"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_nombre"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_fecha"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txt_grupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_grupo"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_aula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_aula"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_ciclo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_ciclo"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_id"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>