<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/D1B2F3"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="#CCBEDC"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:id="@+id/relative_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/tv_ciclo"
            android:autoText="false"
            android:text="@string/nombre_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_nombre"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/tv_ciclo"
            android:autoText="false"
            android:text="@string/fecha_text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_Modalidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_fecha"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/tv_ciclo"
            android:text="@string/modalidad_text"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ciclo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:autoText="false"
            android:text="@string/txt_ciclo"
            android:textAlignment="gravity"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_aula"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:text="@string/aula_text"
            android:textAlignment="center"
            android:textSize="30sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_grupo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:text="@string/grupo_text"
            android:textAlignment="center"
            android:textSize="30sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:text="@string/txt_id"
            android:textAlignment="center"
            android:textSize="30sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
