<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLeerdatos">

    <TextView
        android:id="@+id/tx_datos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimeDatePicker"
        android:layout_width="410dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:background="@color/D1B2F3"
        android:text="@string/fecha_nac"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_datos" />

   <!-- <TextView
        android:id="@+id/tv_nacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/fecha_nacimiento"
        app:layout_constraintEnd_toStartOf="@+id/etd_Dia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_datos" />

    <EditText
        android:id="@+id/etd_Dia"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="DIA"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/etd_Mes"
        app:layout_constraintTop_toBottomOf="@+id/tx_datos" />

    <EditText
        android:id="@+id/etd_Mes"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="MES"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/etd_anyo"
        app:layout_constraintTop_toBottomOf="@+id/tx_datos" />

    <EditText
        android:id="@+id/etd_anyo"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="8"
        android:hint="AÑO"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_datos" />-->

    <RadioGroup
        android:id="@+id/rg_modalidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeDatePicker">

        <RadioButton
            android:id="@+id/rbSemipresencial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:text="@string/semipresencial" />

        <RadioButton
            android:id="@+id/rbPresencial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="68dp"
            android:text="@string/presencial" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_ciclo"
        android:layout_width="397dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_modalidad">

        <RadioButton
            android:id="@+id/rb_Asir"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:checked="false"
            android:text="@string/asir" />

        <RadioButton
            android:id="@+id/rb_Daw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/daw" />

        <RadioButton
            android:id="@+id/rb_Dam"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:checked="true"
            android:text="@string/dam"
            android:textAlignment="center" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_Aceptar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/aceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_ciclo" />

    <Button
        android:id="@+id/bt_Cancelar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_Aceptar" />

</androidx.constraintlayout.widget.ConstraintLayout>